--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'https://www.easy-mock.com/mock/5d1c7e82c6ffa44a60b5edb9/online-shopping-mall'
+VUE_APP_BASE_API = 'http://192.168.2.79:3000'
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
 # to control whether the babel-plugin-dynamic-import-node plugin is enabled.
